kubernetes/skywalker/application/snipe-it/snipeit.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: snipeit

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - snipeit.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: snipeit
            port:
              number: 80
